--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
     "@picocss/pico": "^1.5.10",
     "axios": "^1.5.0",
     "localforage": "^1.10.0",
